# receipt-scanner

./: .dockerignore  .flake8  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: linters.yml  release.yml
docker/: Dockerfile  entrypoint.sh
receipt_scanner/: __init__.py  __main__.py  cli.py  core.py  debug.py  image_to_text.py  parser.py
receipt_scanner/image/: __init__.py  constants.py  contour.py  core.py  debug.py  errors.py  utils.py
receipt_scanner/image/filters/: __init__.py  base_filter.py  binarize.py  canny.py  compress.py  denoise.py  dilate.py  gaussian_blur.py  grayscale.py  median_blur.py  morphological_close.py  perspective_wrapper.py  resize.py  thresholds.py
scripts/: bump.sh
