[tool.poetry]
name = "recipe-scanner"
description = "Recipe Scanner"
authors = ["Daniel Leal <dlleal@uc.cl>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
imutils = "^0.5.4"
pytesseract = "^0.3.10"
opencv-python = "^4.6.0"
scipy = "^1.9.1"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
scikit-image = "^0.19.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.14.5"
mypy = "^0.971"
