[tool.poetry]
name = "recipe-scanner"
description = "Recipe Scanner"
authors = ["Daniel Leal <dlleal@uc.cl>"]
version = "0.1.0"

packages = [
    { include = "receipt_scanner" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pytesseract = "^0.3.10"
opencv-python = "^4.6.0"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.14.5"
mypy = "^0.971"

[tool.poetry.plugins."console_scripts"]
scanner = "receipt_scanner.cli:dispatcher"
